k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
